# chores

./: .dockerignore  .flake8  Dockerfile  README.md  app.py  chores.db  pyproject.toml  pyrightconfig.json
static/: style.css
templates/: admin.html  base.html  day.html  login.html  week.html
utils/: db.py  helpers.py
