[tool.poetry]
name = "chores"
version = "0.1.0"
description = ""
authors = ["Henrik Farre <henrik@rockhopper.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
